# icl-proj

./: ASTBAnd.java  ASTBool.java  ASTDef.java  ASTDeref.java  ASTFunc.java  ASTIf.java  ASTPreinc.java  ASTSeq.java  ASTSub.java  ASTWhile.java  GlobalCounter.java  Interpreter.java  LFunType.java  NOTES.md  NOTES2.org  README.md  RefCellTypesGlobalList.java  Triple.java  TypeError.java  Typechecker.java  incompleteness-of-typechecking.txt  source.txt
BASE-0-2021/: ASTAdd.java  ASTDef.java  ASTDiv.java  ASTId.java  ASTMult.java  ASTNode.java  ASTNum.java  ASTSub.java  ASTUminus.java  CodeBlock.java  Compiler.java  Environment.java  Interpreter.java  Main.j  Parser.jj  makefile  source.txt
COMPILER/: ASTAdd.java  ASTApply.java  ASTAssign.java  ASTBAnd.java  ASTBNeg.java  ASTBOr.java  ASTBool.java  ASTDef.java  ASTDeref.java  ASTDiv.java  ASTFunc.java  ASTId.java  ASTIf.java  ASTMult.java  ASTNew.java  ASTNode.java  ASTNodeX.java  ASTNum.java  ASTPreinc.java  ASTPrint.java  ASTPrintln.java  ASTRelOp.java  ASTSeq.java  ASTSub.java  ASTUminus.java  ASTWhile.java  AbstractASTNode.java  CodeBlock.java  Compiler.java  Environment.java  Frame.java  GlobalCounter.java  Interpreter.java  LBool.java  LBoolType.java  LCell.java  LFunType.java  LFunc.java  LInt.java  LIntType.java  (+12 more)
HC/: CHANGELOG.md  HC.cabal
HC/app/: Interpreter.hs  Main.hs  Parser.hs  Syntax.hs  Typechecker.hs
tests/: 3.test  4.test  6.correct  7.correct  compiler-1.1.correct  compiler-1.1.test  compiler-1.2.correct  compiler-1.2.test  compiler-1.correct  compiler-11.correct  compiler-13.test  compiler-14.test  (+23 more)
(+46 files in other folders)
