cabal-version:      3.6
name:               HC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable HC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Syntax
        Parser
        Typechecker
        Interpreter

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        parsec
    hs-source-dirs:   app
    default-language: Haskell2010
